Add benchmark tests for ScyllaDB migrator
Introduce JMH microbenchmarks for CPU-bound transformations (explodeRow,
convertValue, createSelection) and integration throughput benchmarks for
end-to-end migration paths (Cassandra→Scylla, Scylla→Scylla) at 100K
and 500K row scales.

- Refactor convertRowTypes closure into public Cassandra.convertValue
- Add sbt-jmh plugin and benchmarks module
- Add Benchmark munit tag, excluded from regular test-integration runs
- Add Makefile targets: benchmark-jmh, benchmark-jmh-quick,
  benchmark-integration, benchmark